--- a/src/main/java/com/haley/continuada/um/MonitoramentoDoSistema.form
+++ b/src/main/java/com/haley/continuada/um/MonitoramentoDoSistema.form
@@ -24,24 +24,128 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
-              <Component id="jProgressBar1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="214" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="lblCpu" alignment="0" min="-2" pref="633" max="-2" attributes="0"/>
+                  <Component id="prgBarCpu" alignment="0" min="-2" pref="584" max="-2" attributes="0"/>
+                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="lblDisco" min="-2" pref="104" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="lblDadoCpu" min="-2" pref="126" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="btnMonitorar" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="lblDadoMemoria" min="-2" pref="157" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="lblMemoria" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace pref="278" max="32767" attributes="0"/>
+                          <Component id="lblDadoDisco" min="-2" pref="202" max="-2" attributes="0"/>
+                      </Group>
+                      <Component id="prgBarDisco" alignment="0" max="32767" attributes="0"/>
+                      <Component id="prgBarMemoria" alignment="0" max="32767" attributes="0"/>
+                  </Group>
+              </Group>
+              <EmptySpace pref="94" max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="lblTitulo" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="173" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="120" max="-2" attributes="0"/>
-              <Component id="jProgressBar1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="168" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="lblTitulo" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="lblCpu" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="prgBarCpu" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="lblDisco" min="-2" pref="15" max="-2" attributes="0"/>
+                  <Component id="lblDadoCpu" min="-2" pref="21" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="prgBarDisco" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="lblMemoria" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblDadoDisco" min="-2" pref="23" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="prgBarMemoria" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+                      <Component id="btnMonitorar" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="lblDadoMemoria" min="-2" pref="29" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
+              <EmptySpace pref="108" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JProgressBar" name="jProgressBar1">
+    <Component class="javax.swing.JProgressBar" name="prgBarCpu">
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblTitulo">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Dialog" size="18" style="1"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Sistema de monitoramento de hardware"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblCpu">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="CPU(%):"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblDisco">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Disco(500GB):"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JProgressBar" name="prgBarDisco">
+      <Properties>
+        <Property name="maximum" type="int" value="500"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblMemoria">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Memoria(8GB):"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JProgressBar" name="prgBarMemoria">
+      <Properties>
+        <Property name="maximum" type="int" value="8"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnMonitorar">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Monitorar"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnMonitorarActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblDadoCpu">
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblDadoDisco">
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblDadoMemoria">
     </Component>
   </SubComponents>
 </Form>
